--- a/ui/component/common/FreezeframeLite/styles.scss
+++ b/ui/component/common/FreezeframeLite/styles.scss
@@ -57,11 +57,16 @@ $transition-duration: 300ms;
   }
 
   &.ff-responsive {
+    width: 100%;
+    height: 100%;
     max-width: 100%;
+    max-height: 100%;
 
     .ff-image,
     .ff-canvas {
       width: 100%;
+      height: 100%;
+      border-radius: 50%;
     }
   }
 }
