Adjust author label alignment in compact mode chat

--- a/ui/scss/component/_livestream-chat.scss
+++ b/ui/scss/component/_livestream-chat.scss
@@ -1126,6 +1126,8 @@ $recent-msg-button__height: 2rem;
     margin-right: 0px;
     margin-top: 0px !important;
     margin-bottom: 0;
+    height: 20px;
+    line-height: 22px;
   }
   .colon {
     float: left;
