--- a/ui/scss/component/_file-render.scss
+++ b/ui/scss/component/_file-render.scss
@@ -146,11 +146,16 @@
       align-items: flex-start;
       line-height: 1.3;
 
+      .claim-tile__info {
+        margin-top: -2px !important;
+      }
+
       .button--no-style {
         align-self: center;
 
         .channel-thumbnail {
           margin: var(--spacing-xxs);
+          margin-left: 0px;
           margin-top: 0px;
           width: 2.5rem;
           height: 2.5rem;
@@ -169,6 +174,11 @@
 
         .claim-preview__title {
           margin: unset;
+          .truncated-text {
+            span {
+              font-size: var(--font-small) !important;
+            }
+          }
         }
       }
 
