Adjust key for pruchased content on mobile

--- a/ui/scss/component/_file-render.scss
+++ b/ui/scss/component/_file-render.scss
@@ -26,6 +26,12 @@
                 margin-bottom: 0;
               }
             }
+            .filePrice__key {
+              .icon {
+                margin-left: 0;
+                margin-right: var(--spacing-m);
+              }
+            }
           }
         }
       }
