--- a/ui/scss/component/_comments.scss
+++ b/ui/scss/component/_comments.scss
@@ -287,7 +287,7 @@ $thumbnailWidthSmall: 2rem;
     margin-top: 0;
     &:hover {
       .channel-name {
-        color: var(--primary-contrast);
+        color: var(--color-primary-contrast);
       }
     }
   }
