Adjust meme text position on medium screens

--- a/ui/scss/init/_gui.scss
+++ b/ui/scss/init/_gui.scss
@@ -592,7 +592,6 @@ img {
   font-weight: bold;
   line-height: 1;
   font-size: 1rem;
-  // margin-bottom: var(--spacing-m);
 
   > .button {
     white-space: initial;
@@ -602,7 +601,8 @@ img {
     font-size: 1.2rem;
     // margin-bottom: var(--spacing-l);
   }
-  @media (min-width: $breakpoint-medium) {
+  // @media (min-width: $breakpoint-medium) {
+  @media (min-width: 1200px) {
     margin-top: var(--spacing-s);
     margin-bottom: -3.7rem;
   }
