Fix help text on verification page in light mode

--- a/ui/scss/init/_gui.scss
+++ b/ui/scss/init/_gui.scss
@@ -329,7 +329,7 @@ img {
 .help {
   display: block;
   font-size: var(--font-xsmall);
-  color: var(--color-text-help);
+  color: var(--color-text);
   margin-top: var(--spacing-s);
 
   &:not(:last-child) {
