--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -276,18 +276,16 @@
   overflow: hidden;
 
   .select--slim {
-    //margin-bottom: var(--spacing-xxs);
     display: flex;
-    //justify-content: center;
-    margin: 0px 0px 10px 10px;
+    margin-left: var(--spacing-s);
+    margin-bottom: var(--spacing-s);
 
     @media (min-width: $breakpoint-small) {
       max-width: none;
 
       select {
-        //max-height: 1.5rem !important;
-        //padding: 0 var(--spacing-xs);
-        //padding-right: var(--spacing-l);
+        padding: 0 var(--spacing-xs);
+        padding-right: var(--spacing-l);
       }
     }
   }
@@ -658,4 +656,10 @@
       right: 0;
     }
   }
+}
+
+.button_selectedServer {
+  display: inline;
+  width: var(--floating-viewer-height);
+  float: right;
 }
