Design Patch August (#2114)
* Fix channel name overlap on markdown page on mobile

* Fix double tab divider on mobile

* Make hidden wallet icon round on mobile

* Update chapter padding on mobile

* Update tos design

--- a/ui/scss/component/_header.scss
+++ b/ui/scss/component/_header.scss
@@ -52,6 +52,10 @@
           display: none;
         }
       }
+      @media (max-width: $breakpoint-small) {
+        width: var(--height-button-mobile);
+        height: var(--height-button-mobile);
+      }
     }
 
     .channel-thumbnail {
