Redesign 'Followed Channels' page

--- a/ui/scss/init/_gui.scss
+++ b/ui/scss/init/_gui.scss
@@ -716,7 +716,10 @@ img {
 .followManage-wrapper {
   @extend .discoverPage-wrapper;
   .claim-list {
-    margin-top: var(--spacing-m);
+    // margin-top: var(--spacing-m);
+  }
+  .wunderbar--inline {
+    margin-bottom: var(--spacing-m);
   }
 }
 
@@ -727,6 +730,18 @@ img {
   -webkit-column-gap: var(--spacing-m);
   column-count: 2;
   column-gap: var(--spacing-m);
+
+  .navigation-link__wrapper {
+    .button {
+      padding-left: 0;
+      background-color: rgba(var(--color-header-background-base), 0.6);
+      margin-bottom: var(--spacing-s);
+      border-radius: var(--border-radius);
+      &:hover {
+        background-color: rgba(var(--color-header-background-base), 0.8);
+      }
+    }
+  }
 
   .claim-preview__title {
     height: 20px;
