--- a/ui/scss/component/_main.scss
+++ b/ui/scss/component/_main.scss
@@ -1196,6 +1196,14 @@ body {
   margin-left: auto;
   margin-right: auto;
 
+  .nag--error {
+    border: 2px solid red;
+    background-color: rgba(255, 0, 0, 0.1);
+    left: 0;
+    bottom: unset;
+    top: var(--spacing-s);
+  }
+
   @media (max-width: $breakpoint-small) {
     margin-top: var(--spacing-m);
 
