--- a/ui/scss/init/_gui.scss
+++ b/ui/scss/init/_gui.scss
@@ -516,13 +516,20 @@ img {
 
 .confirm__label {
   @extend label;
+  font-size: var(--font-base);
+  font-weight: var(--font-weight-bold);
 }
 
 .confirm__value {
   display: flex;
   align-items: center;
   margin-bottom: var(--spacing-m);
-  font-size: var(--font-large);
+  font-size: var(--font-base);
+  opacity: 0.8;
+
+  .claim-preview__wrapper--channel {
+    width: 100%;
+  }
 
   &:last-child {
     margin-bottom: 0;
