Break words in post page title on desktop

--- a/ui/scss/component/_post.scss
+++ b/ui/scss/component/_post.scss
@@ -41,6 +41,7 @@
   margin-top: 0;
   margin-bottom: var(--spacing-s);
   font-weight: var(--font-weight-bold);
+  word-break: break-word;
 
   :first-child {
     display: inline-block;
