ClaimListHeader: remove additional padding
The labels themselves already have some padding, so it ended up being padded too much than necessarily.

Cleaning up everything would affect other areas, so just remove the outer padding for now to get the same outcome.

--- a/ui/component/claimListHeader/style.scss
+++ b/ui/component/claimListHeader/style.scss
@@ -1,3 +1,15 @@
+@import '~ui/scss/init/breakpoints';
+
+.clh__wrapper {
+  // These changes should be done in the main file, but no time to test
+  // the collection's claim list header (which shares the same selector),
+  // hence the wrapper.
+
+  .claim-search__menus {
+    padding: 0;
+  }
+}
+
 .clh-tag-search {
   display: flex;
   margin-left: var(--spacing-s);
