Adjust 'Followed Channels' page on mobile

--- a/ui/scss/init/_gui.scss
+++ b/ui/scss/init/_gui.scss
@@ -738,6 +738,10 @@ img {
   column-count: 2;
   column-gap: var(--spacing-m);
 
+  @media (max-width: $breakpoint-small) {
+    column-gap: var(--spacing-s);
+  }
+
   .navigation-link__wrapper {
     .button {
       padding-left: 0;
