Adjust 'Manage Following button' style & behavior

--- a/ui/scss/component/_navigation.scss
+++ b/ui/scss/component/_navigation.scss
@@ -302,8 +302,13 @@
 
 .navigation-link--icon-centered {
   padding-left: 0;
+  border-radius: var(--border-radius);
   .button__content {
     justify-content: center;
+  }
+
+  &.navigation-link--active {
+    display: none;
   }
 }
 
