Adjust wunderbar width in sidebar

--- a/ui/scss/component/_navigation.scss
+++ b/ui/scss/component/_navigation.scss
@@ -441,6 +441,18 @@
   .empty {
     padding: 0;
   }
+
+  .wunderbar {
+    fieldset-section {
+      width: 100%;
+    }
+    @media (max-width: $breakpoint-small) {
+      padding-left: 0;
+      .icon {
+        left: var(--spacing-s);
+      }
+    }
+  }
 }
 
 .navigation__overlay {
