feat: handle stripe script null case, allow to reload form, and indicate to turn off blockers

--- a/ui/scss/init/_gui.scss
+++ b/ui/scss/init/_gui.scss
@@ -452,6 +452,11 @@ img {
   margin-left: 2px;
 }
 
+.error__text--stripe-card {
+  text-align: center;
+  margin-top: var(--spacing-s);
+}
+
 .help--error {
   @extend .help;
   color: var(--color-text-error);
