Update chat layout in compact mode

--- a/ui/scss/component/_livestream-chat.scss
+++ b/ui/scss/component/_livestream-chat.scss
@@ -1203,5 +1203,6 @@ $recent-msg-button__height: 2rem;
   .sticker__comment {
     float: left;
     max-height: 22px;
+    margin-bottom: 0;
   }
 }
